--- a/git1.0.html
+++ b/git1.0.html
@@ -9,15 +9,12 @@
 <META HTTP-EQUIV="Cache-Control" CONTENT="no-cache, must-revalidate"> 
 <META HTTP-EQUIV="expires" CONTENT="0">
 <meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-<script src="js/_ini.js"></script>
-<!--<script src="script/git.js?i=1"></script>
--->
-<script src="script/http.js?i=1"></script>
-<script src="script/git.js?i=1"></script>
-<script src="script/db.js?i=1"></script>
+<script src="script/http.js"></script>
+<script src="script/git1.0.js"></script>
+<script src="script/db1.0.js"></script>
 <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.8.0.js"></script>
 
-<script src="script/store.js?i=1"></script>
+<script src="script/store1.0.js"></script>
 
 <script>var ttt="";</script>
 <style type="text/css">
