--- a/git.html
+++ b/git.html
@@ -17,9 +17,9 @@
 -->
 <script src="//git.docfeng.top/js/_ini.js"></script>
 <script src="script/http.js"></script>
-<script src="script/gitapi2.0.js"></script>
-<script src="script/db2.0.js"></script>
-<script src="script/store2.0.js"></script>
+<script src="script/gitapi.js"></script>
+<script src="script/db.js"></script>
+<script src="script/store.js"></script>
 <script>var ttt="";</script>
 <style type="text/css">
 html,body{
