--- a/dir.html
+++ b/dir.html
@@ -116,6 +116,7 @@ dialog{
     <div class="dialog">
     <header>文件操作</header>
     <section  onclick="event.stopPropagation();">
+        <input type="button" value="eval" onclick="eval(file_txt.value)"/>
         <input type="button" value="getFile" onclick="htmlFSO.getFile(file_name.value)"/>
         <input type="button" value="writeFile" onclick="htmlFSO.writeFile(file_name.value,file_txt.value)"/>
         <input type="button" value="deleteFile" onclick="htmlFSO.deleteFile(file_name.value)"/>
