--- a/dir.html
+++ b/dir.html
@@ -13,8 +13,8 @@
 <meta name="description" content="版本号1.0" />
 <script src="http://git.docfeng.top/script/base.js"></script>
 <script src="script/http.js"></script>
-<script src="script/gitapi.js?i=1"></script>
-<script src="script/db.js"></script>
+<script src="script/gitapi.js"></script>
+<script src="script/db.js?i=1"></script>
 <script src="script/store.js"></script>
 <style type="text/css">
 *{
