--- a/reader/page.html
+++ b/reader/page.html
@@ -18,7 +18,7 @@
 	<script src="http://git.docfeng.top/script/store.js"></script>
 	
 	<script src="script/list.js"></script>
-	<script src="flexible.0.3.4.js"></script>
+	<script src="script/flexible.0.3.4.js"></script>
 	<script type="text/javascript" src="script/base.js"></script>
 	<script type="text/javascript" src="script/novel2.js"></script>
 	<script src="script/msg.js"></script>
