--- a/reader/page.html
+++ b/reader/page.html
@@ -319,8 +319,8 @@ window.addEventListener("load",async function(){
     }
 })();*/
   </script>
-  <script type="text/javascript" src="fso_jsonp.js"></script>
-  <script type="text/javascript" src="geth.js"></script>
+  <script type="text/javascript" src="script/fso_jsonp.js"></script>
+  <script type="text/javascript" src="script/geth.js"></script>
   <script type="text/javascript" src="script/readpage-0.1.js"></script>
 </body>
 </html>
