--- a/git.html
+++ b/git.html
@@ -15,7 +15,7 @@
 <script src="//git.docfeng.top/script/db.js"></script>
 <script src="//git.docfeng.top/script/store.js"></script>
 -->
-<script src="//git.docfeng.top/js/_ini.js"></script>
+<script src="script/base.js"></script>
 <script src="script/http.js"></script>
 <script src="script/gitapi.js"></script>
 <script src="script/db.js"></script>
