--- a/git.html
+++ b/git.html
@@ -151,7 +151,7 @@ and (orientation : portrait) {
     <div class="control_box" id="control_box">
         <input type="button" value='eval' onclick="eval(page.txt.value)" />
         <input type="button" value='reload' onclick='location.reload()'/>
-        <input type="button" value='file' onclick='/*alert(fso.createFile("1.js"))*/'/>
+        <input type="button" value='copy' onclick='copy()'/>
         <input type="button" value="write" onclick="htmlFSO.write()"/>
         <input type="button" value="read" onclick="htmlFSO.read()"/>
         <input type="button" value="add" onclick="htmlFSO.add()"/>
