--- a/uploadgit.html
+++ b/uploadgit.html
@@ -19,12 +19,12 @@
 文件:<input type="file" id="file1" multiple="multiple" onchange="getName()"><br/>
 重命名<input type="text" id="filename" /><br/>
 <input type="button" value="上传" onclick="preview()">
+<br/>
 <img id="img1" src="" height="200" alt="Image preview...">
 <span id=ss>gggg</span>
 <video src="https://github.com/docfeng/source/raw/master/Redcon_201712310610155785434128.mp4" width="100%" height="480" controls="controls"></video>
 <audio autoplay="autoplay" id="audio_play" loop="loop">
-<source src="MP3地址" type="audio/mpeg">
-<source src= type="audio/mpeg">
+<source src="1.mp3"  type="audio/mpeg">
 </audio>
 <input type="text" id="sample" />
 <input type="button" id="sample" onclick="eval(eval1.value)" />
@@ -33,12 +33,16 @@
 git=new gitapi("docfeng");
 getName=function(){
     var name=file1.files[0].name;
+    var type=file1.files[0].type;
+    //alert(type)
+    alert(/text/.test(type));
     filename.value=name;
     var index=name.lastIndexOf(".");
     var str=name.slice(index+1,name.length);
     //alert(str)
     var IMG="BMP、JPG、JPEG、PNG、GIF、SVG";
     var TXT="TXT,PHP,ASP,HTML,CSS,JS";
+    var Audio="mp3";
     var reg=new RegExp(str,"i");
     if(IMG.search(reg)>=0){
         var reader = new FileReader();
@@ -47,6 +51,19 @@ getName=function(){
             var dataURL = reader.result;
             //var img = new Image();
             window.img1.src = dataURL;
+        };
+        reader.readAsDataURL(file1.files[0]); // 读出 base64
+    }
+    if(Audio.search(reg)>=0){
+        var reader = new FileReader();
+        reader.onloadend = function () {
+            // 图片的 base64 格式, 可以直接当成 img 的 src 属性值
+            var dataURL = reader.result;
+            //var img = new Image();
+            window.audio_play.src = dataURL;
+            window.audio_play.load()
+            window.audio_play.play();
+            new Audio(reader.result).play();
         };
         reader.readAsDataURL(file1.files[0]); // 读出 base64
     }
@@ -71,7 +88,6 @@ function preview(e) {
         var str=dataURL.split("base64,");
         var name= filename.value||name;
         git.write({"owner":"docfeng",repos:"page","name":name,"txt":str[1]});
-        prompt("","")
     };
     reader.readAsDataURL(file1.files[0]); // 读出 base64
 }
