--- a/uploadgit.html
+++ b/uploadgit.html
@@ -23,8 +23,8 @@
 <img id="img1" src="" height="200" alt="Image preview...">
 <span id=ss>gggg</span>
 <video src="https://github.com/docfeng/source/raw/master/Redcon_201712310610155785434128.mp4" width="100%" height="480" controls="controls"></video>
-<audio autoplay="autoplay" id="audio_play" loop="loop">
-<source src="1.mp3"  type="audio/mpeg">
+<audio autoplay="autoplay" id="audio_play" loop="loop" src="1.mp3">
+<source src="1.mp3"  type="audio/mp3">
 </audio>
 <input type="text" id="sample" />
 <input type="button" id="sample" onclick="eval(eval1.value)" />
